<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_1"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_picture_description"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/profile_picture_description"
        android:padding="10dp"
        android:src="@drawable/baseline_account_circle_24" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/login"
        android:backgroundTint="@color/main3"
        android:hint="@string/username_hint"
        android:padding="12dp"
        android:textColorHint="@color/dark" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/login"
        android:backgroundTint="@color/main3"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColorHint="@color/dark" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:background="@drawable/login"
        android:backgroundTint="@color/main3"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColorHint="@color/dark" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="32dp"
        android:backgroundTint="@color/main"
        android:padding="12dp"
        android:text="@string/update_button"
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>