<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/onboarding_1"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="0dp"
        android:foregroundGravity="clip_vertical"
        app:srcCompat="@drawable/baseline_menu_24" />

    <ImageView
        android:id="@+id/prof_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="end"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="0dp"
        android:foregroundGravity="clip_vertical"
        app:srcCompat="@drawable/baseline_account_circle_24" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="12dp"
        android:gravity="end"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="198dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:foregroundGravity="clip_vertical"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginHorizontal="20dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/tagline"
        android:textColor="@color/main"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/todo_list"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:background="@drawable/login"
        android:backgroundTint="@color/main"
        android:gravity="center"
        android:text="@string/todo_list"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:clickable="true"
        android:focusable="true" />

    <TextView
        android:id="@+id/manage_time"
        android:layout_width="213dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/login"
        android:backgroundTint="@color/main"
        android:gravity="center"
        android:text="@string/manage_time"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>